--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>TopStore</title>
 	<link rel="stylesheet" type="text/css" href="css/Stilo.css">
+	
+    <link rel="stylesheet" href="css/Footer-with-logo.css">
+</head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="js/menu.js"></script>
 
@@ -26,10 +29,10 @@
 				<li class="submenu"><a href="#"> <img src="img/icon/007-placa-madre-1.png" > <br>Productos</a>
 							<ul >
 								<li><a href="#" > <img src="img/icon/pantallas.png">  Pantallas  </a></li>
-								<li><a href="#" > <img src="img/icon/006-memoria-ram.png"> Ram </a></li>
+								<li><a href="html/ram.html" > <img src="img/icon/006-memoria-ram.png"> Ram </a></li>
 								<li><a href="#" > <img src="img/icon/011-tarjeta-grafica.png"> Gaficas  </a></li>
 								<li><a href="#" > <img src="img/icon/007-placa-madre-1.png"> Motherboards </a></li>
-								<li><a href="#" >  <img src="img/icon/013-disco-duro.png"> Disco Duros </a></li>
+								<li><a href="html/discosduros.html" >  <img src="img/icon/013-disco-duro.png"> Disco Duros </a></li>
 							</ul>
 				</li>
 				<li class="submenu" ><a href="#"> <img src="img/icon/003-carro-de-la-compra-1.png" > <br>Promociones</a>	
@@ -40,8 +43,15 @@
 								<li><a href="#" > items </a></li>
 							</ul>
 				</li>
-				<li><a href="#"> <img src= "img/icon/conocenos.png"> <br>Conosenos</a></li>
-				<li><a href="#"> <img src="img/icon/017-pantalla-de-tv.png" > <br> Contactanos</a></li>			
+				<li class="submenu" ><a href="#"> <img src= "img/icon/conocenos.png"> <br>Conosenos</a>
+
+							<ul >
+								<li><a href="#" > <img src="img/icon/006-terminar.png"> Mision </a></li>
+								<li><a href="#" >  Vicion </a></li>
+								<li><a href="#" > <img src="img/icon/007-objetivo.png"> Objetivo  </a></li>
+							</ul>
+				</li>
+				<li><a href="html/contactanos.html"> <img src="img/icon/017-pantalla-de-tv.png" > <br> Contactanos</a></li>			
 	</ul>	
 		</nav>	
 	</div>
@@ -52,10 +62,7 @@
 		<section id="banner">
 
 		 		<img src="img/banner.png">	
-					<div class="contenedor">
-						<h2> compra tu pc gamer i7 </h2>
-						<a href="#" >Leer mas  </a>
-					</div>
+					
 		</section>
 
 		<section id="bienvenidos">
@@ -109,10 +116,7 @@
 				</div>
 		</section>
 
-		
-		
-
 </main>
-	
+
 </body>
 </html>
