--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -22,7 +22,7 @@
 	<nav class="menu"> 
 
 	<ul>
-				<li><a href="#"> <img src="../img/icon/019-casa.png" ><br> Inicio</a></li>
+				<li><a href="../index.html"> <img src="../img/icon/019-casa.png" ><br> Inicio</a></li>
 				<li class="submenu"><a href="#"> <img src="../img/icon/007-placa-madre-1.png" > <br>Productos</a>
 							<ul >
 								<li><a href="#" > <img src="../img/icon/pantallas.png">  Pantallas  </a></li>
@@ -49,11 +49,7 @@
 
 <main>
 			
-		<section id="banner">
 
-		 		<img src="../img/banner.png">	
-				
-		</section>
 
 		<section id="formulario"> 
 				<form name="efren-martinez" id="efren-martinez-form" method="post" action="contact.php">
