--- a/html/ram.html
+++ b/html/ram.html
@@ -21,7 +21,7 @@
 	<nav class="menu"> 
 
 	<ul>
-				<li><a href="#"> <img src="../img/icon/019-casa.png" ><br> Inicio</a></li>
+				<li><a href="../index.html"> <img src="../img/icon/019-casa.png" ><br> Inicio</a></li>
 				<li class="submenu"><a href="#"> <img src="../img/icon/007-placa-madre-1.png" > <br>Productos</a>
 							<ul >
 								<li><a href="#" > <img src="../img/icon/pantallas.png">  Pantallas  </a></li>
@@ -50,7 +50,7 @@
 			
 		<section id="banner">
 
-		 		<img src="../img/banner.png">	
+		 		<img src="../img/banerRam.jpg">	
 				
 		</section>
 
