--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 				<li><a href="#"> <img src="img/icon/019-casa.png" ><br> Inicio</a></li>
 				<li class="submenu"><a href="#"> <img src="img/icon/007-placa-madre-1.png" > <br>Productos</a>
 							<ul >
-								<li><a href="#" > <img src="img/icon/pantallas.png">  Pantallas  </a></li>
+								<li><a href="html/pantallas.html" > <img src="img/icon/pantallas.png">  Pantallas  </a></li>
 								<li><a href="html/ram.html" > <img src="img/icon/006-memoria-ram.png"> Ram </a></li>
-								<li><a href="#" > <img src="img/icon/011-tarjeta-grafica.png"> Gaficas  </a></li>
-								<li><a href="#" > <img src="img/icon/007-placa-madre-1.png"> Motherboards </a></li>
+								<li><a href="html/graficas.html" > <img src="img/icon/011-tarjeta-grafica.png"> Gaficas  </a></li>
+								<li><a href="html/motherboard.html" > <img src="img/icon/007-placa-madre-1.png"> Motherboards </a></li>
 								<li><a href="html/discosduros.html" >  <img src="img/icon/013-disco-duro.png"> Disco Duros </a></li>
 							</ul>
 				</li>
@@ -68,7 +68,12 @@
 		<section id="bienvenidos">
 				<h2>Bienvenidos conosedorres al logar donde estan las mejores pc del mercado </h2>
 				<p>
-				En TopStore encontraras lo último del mundo gamer, somos liberes en El Salvador. Siempre pensando en mejorar nuestros servicios te invitamos  a que te des una vuelta por nuestros productos, no te arrepentirás..
+					Tienda de computadoras y accesorios TopStore
+					TopStore es una tienda en línea donde encontrara productos de la más alta calidad ya que trabajamos con las mejores marcas, trabajamos para mantener excelentes ofertas y disfrute de nuestras promociones de envío gratis y trato personalizado para cada cliente como lo merece.
+					Le invitamos a conocer nuestra página web, el cual le permitirá navegar de forma fácil y rápida por nuestras categorías como por ejemplo: Laptop, Memorias RAM, Impresoras, Accesorios entre otras categorías.
+					Ubicación 
+					Pueden encontrarnos también en el Kilómetro, 11.5, carretera que conduce a Santa Tecla, Carretera Panamericana, Santa Tecla 503.
+
 		</p>
 			
 		</section>
