casi se termian

--- a/html/motherboard.html
+++ b/html/motherboard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	
-	<header> 
+		<header> 
 
 	<div class="contenedor">
 		
@@ -24,27 +24,33 @@
 				<li><a href="#"> <img src="../img/icon/019-casa.png" ><br> Inicio</a></li>
 				<li class="submenu"><a href="#"> <img src="../img/icon/007-placa-madre-1.png" > <br>Productos</a>
 							<ul >
-								<li><a href="#" > <img src="../img/icon/pantallas.png">  Pantallas  </a></li>
-								<li><a href="#" > <img src="../img/icon/006-memoria-ram.png"> Ram </a></li>
-								<li><a href="#" > <img src="../img/icon/011-tarjeta-grafica.png"> Graficas  </a></li>
-								<li><a href="#" > <img src="../img/icon/007-placa-madre-1.png"> Motherboards </a></li>
-								<li><a href="#" >  <img src="../img/icon/013-disco-duro.png"> Disco Duros </a></li>
+								<li><a href="pantallas.html" > <img src="../img/icon/pantallas.png">  Pantallas  </a></li>
+								<li><a href="ram.html" > <img src="../img/icon/006-memoria-ram.png"> Ram </a></li>
+								<li><a href="graficas.html" > <img src="../img/icon/011-tarjeta-grafica.png"> Gaficas  </a></li>
+								<li><a href="motherboard.html" > <img src="../img/icon/007-placa-madre-1.png"> Motherboards </a></li>
+								<li><a href="discosduros.html" >  <img src="../img/icon/013-disco-duro.png"> Disco Duros </a></li>
 							</ul>
 				</li>
-				<li class="submenu" ><a href="#"> <img src="../img/icon/003-carro-de-la-compra-1.png" > <br>Promociones</a>	
-		
+				<li class="submenu" ><a href="#"> <img src="../img/icon/003-carro-de-la-compra-1.png" > <br>Promociones</a>
 							<ul >
-								<li><a href="#" > items </a></li>
-								<li><a href="#" > items </a></li>
-								<li><a href="#" > items </a></li>
+								<li><a href="#" > <img src="../img/icon/descuento1.png"> liquidacion  </a></li>
+								<li><a href="#" > <img src="../img/icon/002-cartera.png"> Pago En Efectivo </a></li>
 							</ul>
 				</li>
-				<li><a href="#"> <img src= "../img/icon/conocenos.png"> <br>Conosenos</a></li>
-				<li><a href="#"> <img src="../img/icon/017-pantalla-de-tv.png" > <br> Contactanos</a></li>			
+				<li class="submenu" ><a href="#"> <img src= "../img/icon/conocenos.png"> <br>Conosenos</a>
+
+							<ul >
+								<li><a href="Misin.html" > <img src="../img/icon/006-terminar.png"> Mision </a></li>
+								<li><a href="Misin.html" > <img src="../img/icon/vision.png"> Vicion </a></li>
+								<li><a href="Misin.html" > <img src="../img/icon/007-objetivo.png"> Objetivo  </a></li>
+							</ul>
+				</li>
+				<li><a href="contactanos.html"> <img src="../img/icon/017-pantalla-de-tv.png" > <br> Contactanos</a></li>			
 	</ul>	
 		</nav>	
 	</div>
 	</header>
+
 
 <main>
 			
@@ -82,12 +88,7 @@
 						 		 <br><p>
 						 		-El sucesor de nuestras Tarjetas Madre Pro <br>Gaming
 								<br>-La tecnología de iluminación Aura<br> Sync RGB LED para lo último <br>en personalización<br>
-								<br>-Amigable con diseños de impresión 3D — Las <br>piezas dedicadas imprimibles en 3D se <br>ajustan facilmente<br>
-								<br>-Audio ROG SupremeFX — Rendimiento de audio renovado<br> con dos amplificadores de audífonos, Sonic Studio III <br>mejorado, y Sonic Radar III
-								Red para Juegos<br>
-								<br>— La mejor Intel® Gigabit Ethernet, LANGuard,<br> y tecnología GameFirst<br>
-								-Conectividad de siguiente generación <br>— Dos slots M.2 incluídos para un ancho <br>de banda de hasta 32Gbps PCIe y conector <br>USB 3.1 Tipo-C
-								ASUS SafeSlot con patente pendiente <br>para mejor retención PCIe y resistencia a la compartición
+								<br>-Amigable con diseños de impresión 3D — Las <br>piezas dedicadas imprimibles en 3D se <
 							  </p><br>
 					</article><br>
 					<article>
@@ -101,11 +102,10 @@
 								SupremeFX: audio impecable que hace<br> que parte del juego
 								De Sonic Radar ll: <br>Analizar y detectar a sus enemigos a <br>dominar
 								Intel Gigabit Ethernet, LANguard<br> y GameFirst III: Top velocidad protegid<br>a redes
-								RAMCache: acelerar su carga el juego<br>
-								Guardián de Gamer: componentes altamente<br> duraderos y características inteligentes <br>de bricolaje<br>
-
+								
 							  </p><br>
 					</article>
+
 					<article>
 						<img src="../img/pro3.jpg" alt="">
 						<h4>ASUS SABERTOOTH Z170 </h4>
@@ -114,23 +114,22 @@
 						 		 <br><p>PCB con un patrón de camuflaje ártico digital<br> e indicadores Q-LED blancos<br>
 								USB 3.1 integrado: un puerto Tipo <br>A y otro Tipo C reversible<br>
 								TUF Detective 2: Información del <br>sistema al alcance de tus manos<br>
-								TUF ICe y Thermal Radar 2: Sistema <br>de refrigeración integral<br>
-								TUF Components: TUF 10K Ti-Caps, TUF Alloy<br> Chokes y MOSFET con certificación milita<br>
-							  </p>
+					
+					</article>		
+
 					<article>
 						<img src="../img/pro5.jpg" alt="">
 						<h4>B250M GAMING PRO</h4>
 						 <img src="../img/icon/004-carro-de-la-compra.png" class="carrito">
 						 		<a href="#"> Detalles </a>
-						 		 <br><p>Supports 7th / 6th Gen Intel® Core™ / Pentium® / Celeron® processors for LGA 1151 socket<br>
+						 		 <br><p>Supports 7th / 6th Gen Intel® Core™ /<br>
+						 		 Pentium® / Celeron® processors for LGA 1151 socket<br>
 								Supports DDR4-2400 Memory (Max.)
 								DS B1 GAMING Mouse B<br>
 								DDR4 Boost: Give your DDR4 memory a <br>performance boost
-								VR Ready: Best virtual<br><br> reality game experience without<br> latency
-								Lightning Fast Game experience:<br> Turbo M.2, Intel Optane Memory Ready<br>
-								Audio Boost: Reward your ears <br>with studio grade sound quality for <br>the most immersive gaming experience
-							  </p><br>
-					</article>
+								VR Ready: Best virtual<br><br>
+
+							  </p>					</article>
 					<article>
 						<img src="../img/pro6.jpg" alt="">
 						<h4>ASUS Z170 PRO GAMING/1151/DDR4</h4>
