--- a/index.html
+++ b/index.html
@@ -35,20 +35,18 @@
 								<li><a href="html/discosduros.html" >  <img src="img/icon/013-disco-duro.png"> Disco Duros </a></li>
 							</ul>
 				</li>
-				<li class="submenu" ><a href="#"> <img src="img/icon/003-carro-de-la-compra-1.png" > <br>Promociones</a>	
-		
+				<li class="submenu" ><a href="#"> <img src="img/icon/003-carro-de-la-compra-1.png" > <br>Promociones</a>
 							<ul >
-								<li><a href="#" > items </a></li>
-								<li><a href="#" > items </a></li>
-								<li><a href="#" > items </a></li>
+								<li><a href="#" > <img src="img/icon/descuento1.png"> liquidacion  </a></li>
+								<li><a href="#" > <img src="img/icon/002-cartera.png"> Pago En Efectivo </a></li>
 							</ul>
 				</li>
 				<li class="submenu" ><a href="#"> <img src= "img/icon/conocenos.png"> <br>Conosenos</a>
 
 							<ul >
-								<li><a href="#" > <img src="img/icon/006-terminar.png"> Mision </a></li>
-								<li><a href="#" >  Vicion </a></li>
-								<li><a href="#" > <img src="img/icon/007-objetivo.png"> Objetivo  </a></li>
+								<li><a href="html/Misin.html" > <img src="img/icon/006-terminar.png"> Mision </a></li>
+								<li><a href="html/Misin.html" > <img src="img/icon/vision.png"> Vicion </a></li>
+								<li><a href="html/Misin.html" > <img src="img/icon/007-objetivo.png"> Objetivo  </a></li>
 							</ul>
 				</li>
 				<li><a href="html/contactanos.html"> <img src="img/icon/017-pantalla-de-tv.png" > <br> Contactanos</a></li>			
