--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -22,34 +22,38 @@
 	<nav class="menu"> 
 
 	<ul>
-				<li><a href="../index.html"> <img src="../img/icon/019-casa.png" ><br> Inicio</a></li>
+				<li><a href="#"> <img src="../img/icon/019-casa.png" ><br> Inicio</a></li>
 				<li class="submenu"><a href="#"> <img src="../img/icon/007-placa-madre-1.png" > <br>Productos</a>
 							<ul >
-								<li><a href="#" > <img src="../img/icon/pantallas.png">  Pantallas  </a></li>
-								<li><a href="#" > <img src="../img/icon/006-memoria-ram.png"> Ram </a></li>
-								<li><a href="#" > <img src="../img/icon/011-tarjeta-grafica.png"> Gaficas  </a></li>
-								<li><a href="#" > <img src="../img/icon/007-placa-madre-1.png"> Motherboards </a></li>
-								<li><a href="#" >  <img src="../img/icon/013-disco-duro.png"> Disco Duros </a></li>
+								<li><a href="pantallas.html" > <img src="../img/icon/pantallas.png">  Pantallas  </a></li>
+								<li><a href="ram.html" > <img src="../img/icon/006-memoria-ram.png"> Ram </a></li>
+								<li><a href="graficas.html" > <img src="../img/icon/011-tarjeta-grafica.png"> Gaficas  </a></li>
+								<li><a href="motherboard.html" > <img src="../img/icon/007-placa-madre-1.png"> Motherboards </a></li>
+								<li><a href="discosduros.html" >  <img src="../img/icon/013-disco-duro.png"> Disco Duros </a></li>
 							</ul>
 				</li>
-				<li class="submenu" ><a href="#"> <img src="../img/icon/003-carro-de-la-compra-1.png" > <br>Promociones</a>	
-		
+				<li class="submenu" ><a href="#"> <img src="../img/icon/003-carro-de-la-compra-1.png" > <br>Promociones</a>
 							<ul >
-								<li><a href="#" > items </a></li>
-								<li><a href="#" > items </a></li>
-								<li><a href="#" > items </a></li>
+								<li><a href="#" > <img src="../img/icon/descuento1.png"> liquidacion  </a></li>
+								<li><a href="#" > <img src="../img/icon/002-cartera.png"> Pago En Efectivo </a></li>
 							</ul>
 				</li>
-				<li><a href="#"> <img src= "../img/icon/conocenos.png"> <br>Conosenos</a></li>
-				<li><a href="#"> <img src="../img/icon/017-pantalla-de-tv.png" > <br> Contactanos</a></li>			
+				<li class="submenu" ><a href="#"> <img src= "../img/icon/conocenos.png"> <br>Conosenos</a>
+
+							<ul >
+								<li><a href="Misin.html" > <img src="../img/icon/006-terminar.png"> Mision </a></li>
+								<li><a href="Misin.html" > <img src="../img/icon/vision.png"> Vicion </a></li>
+								<li><a href="Misin.html" > <img src="../img/icon/007-objetivo.png"> Objetivo  </a></li>
+							</ul>
+				</li>
+				<li><a href="contactanos.html"> <img src="../img/icon/017-pantalla-de-tv.png" > <br> Contactanos</a></li>			
 	</ul>	
 		</nav>	
 	</div>
 	</header>
 
-<main>
-			
 
+<main>
 
 		<section id="formulario"> 
 				<form name="efren-martinez" id="efren-martinez-form" method="post" action="contact.php">
