--- a/html/discosduros.html
+++ b/html/discosduros.html
@@ -20,7 +20,7 @@
 	<nav class="menu"> 
 
 	<ul>
-				<li><a href="#"> <img src="../img/icon/019-casa.png" ><br> Inicio</a></li>
+				<li><a href="../index.html"> <img src="../img/icon/019-casa.png" ><br> Inicio</a></li>
 				<li class="submenu"><a href="#"> <img src="../img/icon/007-placa-madre-1.png" > <br>Productos</a>
 							<ul >
 								<li><a href="pantallas.html" > <img src="../img/icon/pantallas.png">  Pantallas  </a></li>
