--- a/html/galeria.html
+++ b/html/galeria.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<title>TopStore</title>
 	<link rel="stylesheet" type="text/css" href="../css/Stilo.css">
+	<link rel="stylesheet" type="text/css" href="../css/galeria.css">
 	
 </head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 	<script src="js/menu.js"></script>
 
 </head>
@@ -57,35 +59,101 @@
 
 <main>
 			
-		<section id="banner">
-
-		 		<img src="../img/bannerVision.jpg">	
-					
-		</section>
 
 		<section id="bienvenidos">
 				
-									<p>
-					<h2>Misión</h2>
-					Ser una empresa líder en la comercialización de equipos de cómputos y accesorios de computadoras, ya que para nosotros los clientes son lo más importante de la empresa, ofrecer un servicio de calidad y con los requerimientos planeados.
+					<h1> Galeria </h1>
+	 
+	<ul class="galeria">
+		<li><a href="#img1"><img src="../img/img1.jpg"></a></li>
+		<li><a href="#img2"><img src="../img/img2.jpg"></a></li>
+		<li><a href="#img3"><img src="../img/img3.jpg"></a></li>
+		<li><a href="#img4"><img src="../img/img4.png"></a></li>
+		<li><a href="#img5"><img src="../img/img5.png"></a></li>
+		<li><a href="#img5"><img src="../img/img6.jpg"></a></li>
+		<li><a href="#img7"><img src="../img/img7.jpg"></a></li>
+		<li><a href="#img8"><img src="../img/img8.jpg"></a></li>
+	</ul>
 
-					<br>
-					<br>
-					<br>
-					<br>
+	<div class="modal" id="img1">
+	<h3>Disco Duro</h3>
+	<div class="imagen">
+	<a href="#img8">&#60</a>
+	<a href="#img2"><img src="../img/img1.jpg"></a>
+	<a href="#img2">></a>
+	</div>
+	<a class="cerrar" href=""> X </a>
+	</div>	
 
-					<H2>Visión.</H2>
-					Ser en un futuro la empresa más reconocida con las mejores marcas de computadoras y accesorios, para lo cual trabajaremos con estándares de calidad bien ejecutados para que los clientes nos prefieran.
-					<br>
-					<br>
-					<br>
-					<br>
+	<div class="modal" id="img2">
+	<h3>Computadora</h3>
+	<div class="imagen">
+	<a href="#img1">&#60</a>
+	<a href="#img3"><img src="../img/img2.jpg"></a>
+	<a href="#img3">></a>
+	</div>
+	<a class="cerrar" href=""> X </a>
+	</div>	
 
-					<h2>Objetivo.</h2>
-					Brindar el mejor servicio en la venta de equipos de cómputo y  sus accesorios a los mejores precios del mercado computacional, ser líder en ventas y ofrecer a nuestros clientes la mejor calidad posible.
+	<div class="modal" id="img3">
+	<h3>Disco Duro</h3>
+	<div class="imagen">
+	<a href="#img2">&#60</a>
+	<a href="#img4"><img src="../img/img3.jpg"></a>
+	<a href="#img4">></a>
+	</div>
+	<a class="cerrar" href=""> X </a>
+	</div>	
 
-							</p>
-			
+	<div class="modal" id="img4">
+	<h3>Accesorios</h3>
+	<div class="imagen">
+	<a href="#img3">&#60</a>
+	<a href="#img5"><img src="../img/img4.png"></a>
+	<a href="#img5">></a>
+	</div>
+	<a class="cerrar" href=""> X </a>
+	</div>	
+
+	<div class="modal" id="img5">
+	<h3>Accesorios</h3>
+	<div class="imagen">
+	<a href="#img4">&#60</a>
+	<a href="#img6"><img src="../img/img5.png"></a>
+	<a href="#img6">></a>
+	</div>
+	<a class="cerrar" href=""> X </a>
+	</div>
+
+	<div class="modal" id="img6">
+	<h3>Accesorios</h3>
+	<div class="imagen">
+	<a href="#img5">&#60</a>
+	<a href="#img7"><img src="../img/img6.jpg"></a>
+	<a href="#img7">></a>
+	</div>
+	<a class="cerrar" href=""> X </a>
+	</div>	
+
+	<div class="modal" id="img7">
+	<h3>Accesorios</h3>
+	<div class="imagen">
+	<a href="#img6">&#60</a>
+	<a href="#img8"><img src="../img/img7.jpg"></a>
+	<a href="#img8">></a>
+	</div>
+	<a class="cerrar" href=""> X </a>
+	</div>	
+
+	<div class="modal" id="img8">
+	<h3>Otros</h3>
+	<div class="imagen">
+	<a href="#img7">&#60</a>
+	<a href="#img1"><img src="../img/img8.jpg"></a>
+	<a href="#img1">></a>
+	</div>
+	<a class="cerrar" href=""> X </a>
+	</div>	
 		</section>
 	
 		
