--- a/html/graficas.html
+++ b/html/graficas.html
@@ -32,7 +32,8 @@
 				</li>
 				<li class="submenu" ><a href="#"> <img src="../img/icon/003-carro-de-la-compra-1.png" > <br>Promociones</a>
 							<ul >
-								<li><a href="#" > <img src="../img/icon/descuento1.png"> liquidacion  </a></li>
+								<li><a href="descuento.html" > <img src="../img/icon/descuento1.png"> liquidacion  </a></li>
+								<li><a href="galeria.html" > <img src="../img/icon/galeria.png"> Galerya </a></li>
 								<li><a href="#" > <img src="../img/icon/002-cartera.png"> Pago En Efectivo </a></li>
 							</ul>
 				</li>
