--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="js/menu.js"></script>
 </head>
-
-	
 <body>
 	
 	<header> 
@@ -62,7 +60,7 @@
 		</section>
 
 		<section id="bienvenidos">
-				<h2>Bienvenidos conosedorres al logar donde estan las mejores pc del mercado </h2>
+				<h2>Bienvenidos conosedores al logar donde estan las mejores pc del mercado </h2>
 				<p>
 					Tienda de computadoras y accesorios TopStore
 					TopStore es una tienda en línea donde encontrara productos de la más alta calidad ya que trabajamos con las mejores marcas, trabajamos para mantener excelentes ofertas y disfrute de nuestras promociones de envío gratis y trato personalizado para cada cliente como lo merece.
